##################################################
 Revision history for Log::Log4perl
##################################################

1.35 (not yet released)
   *    (ms) [RT 73462] Changed logwarn/logcluck/logcarp/error_warn to
             warn() unconditionally and send the message to log4perl which
             will log it only if the log level conditions are met.

1.34 (2011/11/04)
   *    (ms) InternalDebug now replaces all instances of INTERNAL_DEBUG,
             not just the first one.
   *    (ms) Added test case for get_logger() with a ref() on the actual
             object instead of on a static category. Updated docs.
   *    (ms) %d{e} in PatternLayout now returns epoch seconds
   *    (ms) [RT 72056] Messages blocked by an appender threshold are no
             longer passed on to the L4p::Appender::Buffer as undefined
             entries.

1.33 (2011/05/31)
   *    (ms) [RT 67132] Applied patch by Darin McBride to allow for
             empty syswrite messages in the file appender.
   *    (ms) [RT 68105] Fixed init-hash handling of subroutine references,
             reported by Frew Schmidt.
   *    (ms) Mike Schwern noticed confusing DESTROY calls to clean up loggers 
             and appenders (http://stackoverflow.com/questions/5914088 and
             https://github.com/mschilli/log4perl/issues/7), so I put on my 
             hazmat suit and cleaned it up. Now perl's garbage collector takes 
             care of disposing of logger and appender carcasses.
   *    (ms) Added Log::Log4perl->remove_logger($logger) to remove a logger
             from the system.

1.32 (2011/02/26)
   *    (ms) Fixed %T caller_depth with wrapper_register(), reported
             by David Christensen.
   *    (ms) [RT 63053] Fixed for qw() {} deprecated (Todd Rinaldo)
   *    (ms) [RT 62674] Fixed call to deprecated form of UNIVERSAL::can (Karen
             Etheridge).
   *    (ms) [RT 62896] Log::Log4perl::Appender::ScreenColoredLevels now 